# redis-blog

./: .env  README.md  db.sqlite3  manage.py  pyproject.toml
posts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
posts/migrations/: 0001_initial.py
redisblog/: asgi.py  redis_db.py  settings.py  wsgi.py
